--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1768,5 +1768,27 @@ textarea.form-control
 		&:hover 
 			background-color: $color-success
 
+.nav-1
+	border: 0 
+	.nav-item
+		border: 0 
+		width: 50%
+		text-align: center
+		border-bottom: 2px solid #dee2e6
+		.step
+			color: $color-gray
+			background: $background
+			border-color: $background
+		&.active 
+			border-bottom: 2px solid $color-success
+			.step 
+				color: #fff
+				background: $color-success
+				border-color: $color-success
+			.align-middle
+				color: $color-success !important
+
+
+
 
 
