--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,7 +18,7 @@ $color-black: #000
 $color-fill: #9F9F9F
 $background: #F7FAFC
 $background-2: #DDEFE2
-$shadow: 0 3px 13px rgba(0, 0, 0, .06)
+$shadow: 0 3px 13px rgba(0, 0, 0, .06) 
 
 body
 	font-family: "ProximaNova", Arial, Helvetica, sans-serifs
@@ -1768,25 +1768,60 @@ textarea.form-control
 		&:hover 
 			background-color: $color-success
 
-.nav-1
-	border: 0 
-	.nav-item
-		border: 0 
+.progress-wrapper-4
+	font-size: 16px
+	@media (max-width: 575.98px)
+		font-size: 11px
+	.progress
+		position: static
+		width: 100%
+	.progress-bar
 		width: 50%
-		text-align: center
-		border-bottom: 2px solid #dee2e6
+	.col
+		padding-bottom: 1rem
+		transition: .3s
 		.step
 			color: $color-gray
 			background: $background
 			border-color: $background
-		&.active 
-			border-bottom: 2px solid $color-success
+			position: relative	
+			transition: .3s
+			&:after 
+				content: ''
+				position: absolute
+				top: 50%
+				left: 50%
+				transform: translate(-50%, -50%)
+				width: 9px 
+				height: 7px
+				background: url("../img/check.svg") no-repeat center center
+				background-size: cover
+				opacity: 0
+				transition: .3s
+		&:nth-child(1)
+			color: $color-success
 			.step 
 				color: #fff
 				background: $color-success
 				border-color: $color-success
-			.align-middle
-				color: $color-success !important
+		&:nth-child(2)
+	&.step-2-active
+		.progress-bar
+			width: 100%
+		.col
+			&:nth-child(1)
+				.step	
+					color: #8ede98
+					background-color: #8ede98
+					&:after 
+						opacity: 1
+			&:nth-child(2)
+				color: $color-success
+				.step 
+					color: #fff
+					background: $color-success
+					border-color: $color-success
+				
 
 
 
