--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1821,9 +1821,19 @@ textarea.form-control
 					color: #fff
 					background: $color-success
 					border-color: $color-success
-				
-
-
-
-
-
+			
+.calendar
+	width: 25px
+	height: 25px
+	border-radius: 100px
+	display: inline-block
+	margin-right: .5rem
+	background: $background-2 url(../img/art/calendar.svg) center center no-repeat
+	background-size: 11px
+	vertical-align: middle
+	&.calendar-2 
+		width: 34px
+		height: 34px
+		background-size: 15px
+	~ *
+		vertical-align: middle
