--- a/css/style.css
+++ b/css/style.css
@@ -1828,7 +1828,7 @@ textarea.form-control {
   border-radius: 100px;
   display: inline-block;
   margin-right: 0.5rem;
-  background: #DDEFE2 url(../img/art/calendar.svg) center center no-repeat;
+  background: #DDEFE2 url(../img/art/calendar-2.svg) center center no-repeat;
   background-size: 11px;
   vertical-align: middle; }
   .calendar.calendar-2 {
