--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1828,7 +1828,7 @@ textarea.form-control
 	border-radius: 100px
 	display: inline-block
 	margin-right: .5rem
-	background: $background-2 url(../img/art/calendar.svg) center center no-repeat
+	background: $background-2 url(../img/art/calendar-2.svg) center center no-repeat
 	background-size: 11px
 	vertical-align: middle
 	&.calendar-2 
