--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1840,3 +1840,35 @@ textarea.form-control
 
 .canvas
 	height: 350px
+
+
+.radio-group-2
+	font-size: 18px
+	display: block
+	margin-bottom: 20px
+	background-color: #fff
+	span
+		color: $color-gray-2
+		display: block
+		border: 2px solid #ededed
+		border-radius: 3px
+		padding: 22px 15px
+		transition: .3s
+		cursor: pointer
+		box-shadow: $shadow
+		&:hover
+			border-color: $color-success
+	input
+		display: none
+		&:checked
+			~ span
+				color: #000
+				font-weight: bold
+				border-color: $color-success
+
+.owl-3
+	.a1 
+		img 
+	.form-control 
+		margin-bottom: 106px
+
