--- a/css/style.css
+++ b/css/style.css
@@ -222,14 +222,14 @@ h6, .h6 {
 .btn-success {
   background-color: #41C752;
   border-color: #41C752; }
-  .btn-success:hover {
+  .btn-success:hover:not(:disabled) {
     background-color: #25772F;
     border-color: #25772F; }
 
 .btn-outline-success {
   color: #8C9EA4;
   border-color: #41C752; }
-  .btn-outline-success:hover {
+  .btn-outline-success:hover:not(:disabled) {
     background-color: #41C752;
     border-color: #41C752;
     color: #fff !important; }
@@ -1842,11 +1842,13 @@ textarea.form-control {
   height: 350px; }
 
 .radio-group-2 {
-  font-size: 18px;
   display: block;
-  margin-bottom: 20px;
-  background-color: #fff; }
-  .radio-group-2 span {
+  background-color: #fff;
+  margin-bottom: 30px; }
+  @media (max-width: 575.98px) {
+    .radio-group-2 {
+      margin-bottom: 15px; } }
+  .radio-group-2 > div {
     color: #8C9EA4;
     display: block;
     border: 2px solid #ededed;
@@ -1854,17 +1856,46 @@ textarea.form-control {
     padding: 22px 15px;
     transition: 0.3s;
     cursor: pointer;
-    box-shadow: 0 3px 13px rgba(0, 0, 0, 0.06); }
-    .radio-group-2 span:hover {
+    box-shadow: 0 3px 13px rgba(0, 0, 0, 0.06);
+    position: relative; }
+    .radio-group-2 > div:hover {
       border-color: #41C752; }
   .radio-group-2 input {
     display: none; }
-    .radio-group-2 input:checked ~ span {
+    .radio-group-2 input:checked ~ div {
+      border-color: #41C752; }
+      .radio-group-2 input:checked ~ div .fz-18 {
+        color: #000;
+        font-weight: bold; }
+  .radio-group-2.checkbox-group-2 > div:before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 22px;
+    height: 22px;
+    border: 1px solid #e8e8e8;
+    border-radius: 100px;
+    background-color: #f6f9fb;
+    background-repeat: no-repeat;
+    background-position: center center;
+    transition: 0.3s; }
+  .radio-group-2.checkbox-group-2:not(.checkbox-group-3) > div {
+    padding-right: 40px; }
+  .radio-group-2.checkbox-group-2 input:checked ~ div:before {
+    border-color: #41C752;
+    background-color: #41C752;
+    background-image: url(../img/check.svg); }
+  .radio-group-2.checkbox-group-3 > div {
+    padding-top: 50px;
+    padding-bottom: 50px; }
+    .radio-group-2.checkbox-group-3 > div .fz-18 {
       color: #000;
       font-weight: bold;
-      border-color: #41C752; }
+      margin-bottom: 10px; }
 
-.owl-3 .form-control {
-  margin-bottom: 106px; }
+.owl-3 .owl-item img {
+  width: auto;
+  display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
