--- a/sass/style.sass
+++ b/sass/style.sass
@@ -987,6 +987,10 @@ textarea.form-control
 		padding-top: 100px
 		padding-bottom: 98px
 		background-image: url(../img/header-6.png)
+	&.header-9
+		padding-top: 111px
+		padding-bottom: 105px
+		background-image: url(../img/header-9.png)
 
 .section-fitness
 	padding: 100px 0 68px
@@ -1907,3 +1911,21 @@ textarea.form-control
 			width: auto
 			display: inline-block
 
+.card-6 
+	padding: 25px 31px 11px !important
+
+.recommend
+	list-style-type: none
+	margin-bottom: 0 
+	padding-left: 16px
+	> li 
+		padding-bottom: 16px
+		position: relative
+		&:before 
+			content: ''
+			position: absolute 
+			top: 6px
+			left: -17px
+			width: 11px
+			height: 10px
+			background-image: url(../img/recommend-arrow.svg)
