--- a/sass/style.sass
+++ b/sass/style.sass
@@ -987,10 +987,6 @@ textarea.form-control
 		padding-top: 100px
 		padding-bottom: 98px
 		background-image: url(../img/header-6.png)
-	&.header-9
-		padding-top: 111px
-		padding-bottom: 105px
-		background-image: url(../img/header-9.png)
 
 .section-fitness
 	padding: 100px 0 68px
@@ -1910,6 +1906,13 @@ textarea.form-control
 		img
 			width: auto
 			display: inline-block
+
+// 29.01.2020
+.header
+	&.header-9
+		padding-top: 111px
+		padding-bottom: 105px
+		background-image: url(../img/header-9.png)
 
 .card-6 
 	padding: 25px 31px 11px !important
