--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1932,3 +1932,77 @@ textarea.form-control
 			width: 11px
 			height: 10px
 			background-image: url(../img/recommend-arrow.svg)
+
+// 04.02/2020
+
+.cart
+	padding: 0 30px 10px
+	background: #fff
+	border: 1px solid #EBECED
+	color: #000
+	border-radius: 4px
+	@media (max-width: 575.98px)
+		padding: 0 8px 10px
+	.cart-top
+		padding: 12px 26px 
+		font-weight: bold
+		background: #F5F7FA
+		margin-left: -30px
+		margin-right: -30px
+		@media (max-width: 575.98px)
+			margin-left: -8px
+			margin-right: -8px
+	ul
+		padding-top: 12px
+		>li
+			padding-left: 22px
+			padding-bottom: 4px
+			display: flex
+			>span
+				font-weight: bold
+				margin-left: auto
+	.custom-control-label 
+		&:before, &:after
+			width: 14px
+			height: 14px
+			top: 3px
+		&:before
+			border-radius: 0.2rem
+
+.green
+	color: $color-success
+
+.fz-50
+	font-size: 50px !important
+	@media (max-width: 767.98px)
+		font-size: 40px !important
+
+.cart-2
+	padding: 0 30px 50px
+	background: #fff
+	color: #000
+	border-radius: 4px
+	box-shadow: 0 3px 13px rgba(0, 0, 0, 0.06)
+	display: flex
+	flex-direction: column
+	.cart2-top
+		background: #A2A2A2
+		text-align: center
+		color: #fff
+		margin-left: -30px
+		margin-right: -30px
+		border-radius: 4px 4px 0 0
+	.cart3-top
+		background: $color-success
+	ul
+		>li
+			position: relative
+			&:before 
+				content: ''
+				position: absolute
+				top: 5px
+				left: -22px
+				width: 16px
+				height: 16px
+				background-image: url(../img/check-cart.svg)
+				background-size: cover
