--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2702,3 +2702,52 @@ body
 .link-inh
 	color: inherit
 
+// 01/06/2020
+
+.text-orange
+	color: #F1AD62
+
+.btn-big
+	font-size: 19px
+
+.card-popup
+	padding: 52px 88px 32px !important
+	@media (max-width: 767.98px)
+		padding: 145px 15px 32px !important
+		margin-top: 55px
+	hr 	
+		border-top-width: 2px
+
+.btn-big
+	font-size: 19px
+	padding: 11.5px 40px 11.5px 22px
+	&:before
+		width: 36px
+		height: 36px
+		background-size: 10px
+
+.img-badge
+	position: absolute
+	top: -14px
+	left: -36px
+	@media (max-width: 767.98px)
+		// display: none
+		left: 50%
+		transform: translateX(-50%)
+		top: -55px
+
+.popup-close
+	width: 14px
+	height: 14px
+	position: absolute
+	top: 23px
+	right: 25px
+	background-image: url(../img/subscription/close.svg)
+	background-size: cover
+	@media (max-width: 767.98px)
+		right: 15px
+	&:hover 	
+		opacity: .8
+
+
+
