purple-carrot-upsell

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2731,7 +2731,6 @@ body
 	top: -14px
 	left: -36px
 	@media (max-width: 767.98px)
-		// display: none
 		left: 50%
 		transform: translateX(-50%)
 		top: -55px
@@ -2749,5 +2748,17 @@ body
 	&:hover 	
 		opacity: .8
 
+// 02/06/2020
 
+.bunner-wrap .bunner-bg-1
+	@media (min-width: 576px)
+		bottom: -4%
 
+.top-review-2
+	text-align: center
+	padding: 6px 100px
+	@media (max-width: 767.98px)
+		padding-left: 84px
+		padding-right: 84px
+	img 
+		max-width: 100%
