--- a/css/style.css
+++ b/css/style.css
@@ -2739,4 +2739,18 @@ body {
   .popup-close:hover {
     opacity: 0.8; }
 
+@media (min-width: 576px) {
+  .bunner-wrap .bunner-bg-1 {
+    bottom: -4%; } }
+
+.top-review-2 {
+  text-align: center;
+  padding: 6px 100px; }
+  @media (max-width: 767.98px) {
+    .top-review-2 {
+      padding-left: 84px;
+      padding-right: 84px; } }
+  .top-review-2 img {
+    max-width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
