--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2762,3 +2762,199 @@ body
 		padding-right: 84px
 	img 
 		max-width: 100%
+
+// 13/06/2020
+
+.header-10
+	padding-top: 97px !important
+	padding-bottom: 96px !important
+	background-image: url(../img/disease/header-10.jpg) !important
+	background-size: cover
+	@media (max-width: 575.98px)
+		padding-top: 57px !important
+		padding-bottom: 0 !important
+
+.btn-warning
+	color: #fff !important
+	background-color: #D4AA14
+	border-color: #D4AA14
+	&:hover:not(:disabled)
+		border-color: #e0a800
+
+.text-warning
+	color: #D4AA14 !important
+
+.bg-warning
+	background-color: #FFFCF3 !important
+
+.btn-suc
+	font-size: 14px
+	border-width: 1px
+	font-weight: normal
+	color: $color-success
+
+.card-b-1
+	border-width: 1px !important
+	overflow: hidden
+
+.bg-bg-1
+	flex-grow: 1
+	background-color: #F8F8F8
+
+.fidelity-head-2
+	border-bottom: 2px solid $background
+	padding: 24px 21px 19px
+	@media (max-width: 575.98px)
+		padding: 31px 15px 18px
+
+.fidelity-2
+	padding: 19px 21px 28px
+	@media (max-width: 575.98px)
+		padding: 27px 15px 25px
+
+.container-sm
+	max-width: 924px
+	margin: 0 auto
+
+.flex-grow-2
+	flex-grow: 2
+
+.card-3-header
+	color: #fff
+	padding: 5px 28px
+	font-weight: bold
+	margin: -28px -28px 26px
+	background-color: $color-success
+	letter-spacing: 3px
+
+.section-bg-svg
+	background-image: url(../img/bg-svg.svg)
+	background-size: cover
+
+.card-ar
+	padding: 0 !important
+	border-radius: 8px
+.card-ar-header
+	padding: 18px 36px 17px
+	border-bottom: 2px solid #EBECED
+	@media (max-width: 575.98px)
+		padding-left: 15px
+		padding-right: 15px
+.card-ar-body
+	padding: 25px 36px 32px
+	@media (max-width: 575.98px)
+		padding-left: 15px
+		padding-right: 15px
+
+.list-ar
+	margin-bottom: 0px
+	padding-left: 0
+	list-style: none
+	margin-bottom: 28px
+	li 	
+		padding-left: 25px
+		position: relative
+		margin-bottom: 8px
+		&:before 
+			content: ''
+			position: absolute
+			left: 0
+			top: 5px
+			width: 14px
+			height: 16px
+			background-image: url(../img/ar.svg)
+			background-size: cover
+
+.header-11
+	padding-bottom: 157px !important
+	position: relative
+	&:before 
+		content: ''
+		position: absolute
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		background-color: rgba(255, 255, 255, .8)
+	.container
+		position: relative
+		&:after 
+			content: ''
+			position: absolute
+			background-image: url(../img/virus.png)
+			background-size: cover
+			width: 61px 
+			height: 60px
+			top: 29px
+			right: -39px
+
+.section-9
+	padding-top: 0
+	position: relative
+	z-index: 1
+	.container-sm
+		margin-top: -92px
+	&:after
+		content: ''
+		position: absolute
+		bottom: 3px
+		left: 50%
+		background-color: $background
+		width: 30px
+		height: 30px
+		border-radius: 4px
+		transform: translate(-50%, 50%) rotate(45deg) skew(5deg, 5deg)
+
+.card-age
+	padding: 40px 60px 50px
+	@media (max-width: 767.98px)
+		padding: 30px
+	&:first-child
+		&:before, &:after 
+			content: ''
+			position: absolute
+			background-image: url(../img/virus.png)
+			background-size: cover
+			z-index: -1
+		&:before
+			width: 99px 
+			height: 98px
+			top: -49px
+			left: -67px
+		&:after 
+			width: 329px 
+			height: 323px
+			top: -183px
+			right: -109px
+			@media (max-width: 1199.98px)
+				width: 215px 
+				height: 211px
+				top: -64px
+				right: -126px
+	.nav-main-4 
+		margin-bottom: 23px
+		.nav-link
+			&.active
+				color: $color-success
+			&:before
+				bottom: -34px
+				background-color: #EDF8EF
+			&:after
+				width: 46px
+				height: 46px
+				border-width: 5px
+
+.tab-block
+	padding: 30px 29px
+	color: #25772F
+	background-color: #EDF8EF
+	@media (max-width: 767.98px)
+		padding-left: 15px
+		padding-right: 15px
+
+
+
+
+
+
+
