--- a/css/style.css
+++ b/css/style.css
@@ -2948,4 +2948,46 @@ body {
       padding-left: 15px;
       padding-right: 15px; } }
 
+.get-it {
+  margin-top: -165px;
+  z-index: 100;
+  position: relative; }
+
+.get-it-2 {
+  margin-top: -145px; }
+
+.container-oto {
+  padding-bottom: 48px; }
+  @media (max-width: 767.98px) {
+    .container-oto {
+      padding-bottom: 80px; } }
+
+.visibility-hidden {
+  visibility: hidden; }
+
+.bunner-wrap .bunner-bg2 {
+  left: 10%; }
+  @media (max-width: 575.98px) {
+    .bunner-wrap .bunner-bg2 {
+      bottom: -5%; } }
+
+.bunner-bg3 {
+  position: absolute;
+  top: -10px;
+  right: 0; }
+  @media (max-width: 1199.98px) {
+    .bunner-bg3 {
+      right: -15%; } }
+  @media (max-width: 991.98px) {
+    .bunner-bg3 {
+      display: none; } }
+
+.bunner-bg4 {
+  position: absolute;
+  top: 0;
+  left: 0; }
+  @media (max-width: 1199.98px) {
+    .bunner-bg4 {
+      display: none; } }
+
 /*# sourceMappingURL=style.css.map */
