--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2953,8 +2953,44 @@ body
 		padding-right: 15px
 
 
+// 26.06
 
+.get-it
+	margin-top: -165px
+	z-index: 100
+	position: relative
 
+.get-it-2
+	margin-top: -145px
 
+.container-oto
+	padding-bottom: 48px
+	@media (max-width: 767.98px)
+		padding-bottom: 80px
+
+.visibility-hidden
+	visibility: hidden
+
+.bunner-wrap
+	.bunner-bg2
+		left: 10%
+		@media (max-width: 575.98px)
+			bottom: -5%
+
+.bunner-bg3
+	position: absolute
+	top: -10px
+	right: 0
+	@media (max-width: 1199.98px)
+		right: -15%
+	@media (max-width: 991.98px)
+		display: none
+
+.bunner-bg4
+	position: absolute
+	top: 0
+	left: 0
+	@media (max-width: 1199.98px)
+		display: none
 
 
