--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2993,4 +2993,12 @@ body
 	@media (max-width: 1199.98px)
 		display: none
 
+.btn-try2
+	padding: 6px 40px 6px 10px
+	font-size: 18px
+	&:before 
+		width: 38px
+		height: 38px
 
+.mt-70
+	margin-top: -70px
