--- a/css/style.css
+++ b/css/style.css
@@ -2995,9 +2995,23 @@ body {
   font-size: 18px; }
   .btn-try2:before {
     width: 38px;
-    height: 38px; }
+    height: 38px;
+    background-size: 10px; }
 
 .mt-70 {
   margin-top: -70px; }
+
+.sticker:before {
+  content: "";
+  position: absolute;
+  width: 114px;
+  height: 114px;
+  top: -18px;
+  right: -47px;
+  background-image: url(../img/st-2.svg);
+  background-size: cover; }
+  @media (max-width: 575.98px) {
+    .sticker:before {
+      right: -23px; } }
 
 /*# sourceMappingURL=style.css.map */
