--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2999,6 +2999,20 @@ body
 	&:before 
 		width: 38px
 		height: 38px
+		background-size: 10px
 
 .mt-70
 	margin-top: -70px
+
+.sticker
+	&:before
+		content: ''
+		position: absolute
+		width: 114px
+		height: 114px
+		top: -18px
+		right: -47px
+		background-image: url(../img/st-2.svg)
+		background-size: cover
+		@media (max-width: 575.98px)
+			right: -23px
