--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3016,3 +3016,14 @@ body
 		background-size: cover
 		@media (max-width: 575.98px)
 			right: -23px
+
+.card.disabled
+	filter: grayscale(1)
+	pointer-events: none
+	.fidelity-head-2
+		border-bottom: 0
+	.btn 
+		border: 2px solid #ECECEC
+		font-weight: bold
+
+
