--- a/css/style.css
+++ b/css/style.css
@@ -3014,4 +3014,13 @@ body {
     .sticker:before {
       right: -23px; } }
 
+.card.disabled {
+  filter: grayscale(1);
+  pointer-events: none; }
+  .card.disabled .fidelity-head-2 {
+    border-bottom: 0; }
+  .card.disabled .btn {
+    border: 2px solid #ECECEC;
+    font-weight: bold; }
+
 /*# sourceMappingURL=style.css.map */
